# calculus-agent

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  main.py  pyproject.toml  pytest.ini  railway.json
backend/: app.py
backend/agent/: graph.py  models.py  nodes.py  prompts.py  schemas.py  state.py
backend/database/: models.py
backend/tests/: test_api.py  test_code_executor.py  test_code_retry.py  test_comprehensive.py  test_database.py  test_fallback.py  test_langgraph.py  test_memory_limits.py  test_parallel_flow.py  test_partial_failure.py  test_planner_bug.py  test_planner_regex_v2.py  test_rate_limit.py  test_real_integration.py  test_real_scenarios_suite.py  test_wolfram.py  test_workflow_comprehensive.py
backend/tools/: code_executor.py  wolfram.py
backend/utils/: memory.py  rate_limit.py  tracing.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.css  App.jsx  index.css  main.jsx
frontend/src/components/: BlockRenderer.jsx  ChatInput.jsx  ErrorBoundary.jsx  GuideTour.jsx  Header.jsx  MessageList.jsx  Modals.jsx  Sidebar.jsx
frontend/src/utils/: chatUtils.js
