[project]
name = "calculus-chatbot"
version = "0.1.0"
description = "Simple agent for calculus problem solving"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.22.1",
    "cvxpy>=1.7.5",
    "diskcache>=5.6.3",
    "fastapi>=0.127.1",
    "greenlet>=3.3.0",
    "httpx>=0.28.1",
    "langchain>=1.2.0",
    "langchain-groq>=1.1.1",
    "langgraph>=1.0.5",
    "langsmith>=0.1.0",
    "matplotlib>=3.10.8",
    "mpmath>=1.3.0",
    "networkx>=3.6.1",
    "numexpr>=2.14.1",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "pint>=0.25.2",
    "plotly>=6.5.0",
    "polars>=1.36.1",
    "pulp>=3.3.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.21",
    "pywavelets>=1.9.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.45",
    "statsmodels>=0.14.6",
    "sympy>=1.14.0",
    "uncertainties>=3.2.3",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
